# MIT-Hackathon

./: .gitignore  Dockerfile  README.md  __init__.py  inference.py  log.txt  openenv.yaml  push_log.txt  pyproject.toml  requirements.txt  server.py
env/: __init__.py  drug_db.py  models.py  pharmasim_env.py  reward.py  scenario_logic.py  utils.py
graders/: __init__.py  grader_easy.py  grader_hard.py  grader_medium.py
server/: app.py
tasks/: __init__.py  task_easy.py  task_hard.py  task_medium.py
training/: requirements-train.txt  train_grpo.py
